fix: scrape.yml syntax

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -12,13 +12,12 @@ jobs:
     steps:
     - name: Check out this repo
       uses: actions/checkout@v3
-    - name: Fetch today's announcements
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
         cache: 'pip'
-      - run: pip install pandas
-      - run: python todayAnns.py
+    - run: pip install pandas
+    - run: python todayAnns.py
     - name: Fetch latest company list
       run: |-
         curl 'https://asx.api.markitdigital.com/asx-research/1.0/companies/directory/file' -o ASX_Listed_Companies.csv
