--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         python-version: '3.10'
         cache: 'pip'
-    - run: pip install pandas
+    - run: pip install -r requirements.txt
     - run: python todayAnns.py
     - name: Fetch latest company list
       run: |-
